[package]
name = "cosmos-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.28.0"
aws-config = "0.54.1"
aws-sdk-sqs = "0.24.0"
bytes = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
gql_client = "1.0.7"
log = "0.4.17"
mongodb = "2.4.0"
reqwest = { version = "0.11.14" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
