[package]
name = "cosmos-indexer"
description = "A Cosmos indexer to index events from blocks"
keywords = ["cosmos", "indexer", "blockchain", "transactions", "indexing"]
categories = ["cli-runner"]
homepage = "https://github.com/afsardo/cosmos-indexer"
documentation = "https://github.com/afsardo/cosmos-indexer"
repository = "https://github.com/afsardo/cosmos-indexer"
license = "GPL-3.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"
authors = ["André Sardo <andre@delphilabs.io>"]

[dependencies]
anyhow = "1.0.70"
async-nats = "0.29.0"
aws-config = "0.55.0"
aws-sdk-sns = "0.25.0"
aws-sdk-sqs = "0.25.0"
base64 = "0.21.0"
bytes = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
mongodb = "2.4.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
